# gemini

./: .env  .gitignore  Dockerfile  Dockerfile.train  continuous_infer.py  continuous_train.py  docker-compose.yml  gemini_preprocess.py  init_checkpoint_2048.py  live_dataset.py  orderbook.py  recorder.py  requirements.txt  test_preprocess.py  trading_engine.py  verify_dataset_stream.py  verify_large_context.py  verify_pipeline.py  verify_portfolio.py  verify_recorder.py
__fast__api__docs__/: conninfo  depth  list_subscriptions  ping  subscribe  time  unsubscribe
cpp/: CMakeLists.txt
cpp/include/: dataset.h  embeddings.h  layers.h  model.h  subset.h
cpp/src/: dataset.cpp  embeddings.cpp  layers.cpp  main.cpp  model.cpp
execution/: gemini_client.py
pyraformer/: embeddings.py  layers.py  main.py  modules.py  pyraformer.py  utils.py
risk/: risk_manager.py
strategies/: base_strategy.py  model_strategy.py  voting_strategy.py
